# gutgin

./: README.md  pyproject.toml
gutgin/: __main__.py
gutgin/datetime/: time.py
gutgin/generators/: __init__.py  char.py  password.py
gutgin/ui/: __init__.py  menu.py  menu_choice.py
